# retail_lakehouse

./: .dockerignore  .env.example  .gitignore  CLI.py  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup_retail_lakehouse_full.ps1
.github/workflows/: cd.yml  ci.yml
config/: settings.yml
data/: .gitignore
data/sample_env/bronze/customers/LOAD_20260601_043953_b869a47b/year=2026/month=6/day=1/: 00000000.parquet
data/sample_env/bronze/customers/LOAD_20260601_054128_1a63c4fb/year=2026/month=6/day=1/: 00000000.parquet
data/sample_env/gold/: lakehouse.duckdb
data/sample_env/silver/: customers.parquet  products.parquet  sales.parquet
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: dim_customers.sql  dim_date.sql  dim_products.sql  dim_stores.sql  fact_sales.sql  schema.yml
dbt/models/staging/: sources.yml  stg_customers.sql  stg_products.sql  stg_sales.sql
dbt/snapshots/: snp_customers.sql  snp_products.sql
docs/: data_dictionary.md
notebook/: khamphadulieu.ipynb
pipeline/: config.py  logging.py  monitoring.py  orchestrator.py
pipeline/bronze/: checks.py  ingestor.py  metadata.py
pipeline/gold/: aggregations.py  dim_date.py  dim_product.py  dim_store.py  fact_sales.py
pipeline/silver/: cleaner.py  quality.py  rejector.py  standardizer.py
scripts/: generate_sample_data.py  generate_small_sample.py
tests/integration/: test_bronze_to_silver.py
tests/unit/: test_bronze_ingestor.py  test_silver_cleaner.py  test_silver_layer.py
(+43 files in other folders)
