[project]
name = "retail-lakehouse"
version = "0.2.0"
description = "Retail Sales Modern Data Lakehouse - Production Grade"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "pyarrow",
    "duckdb",
    "dbt-duckdb",
    "great-expectations",
    "pydantic-settings",
    "structlog",
    "pyyaml",
    "tenacity",
    "faker",
    "typer", # <-- Đã chuyển Typer lên production dependencies
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ipykernel",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]

